use case 2 - treatments
