# internal/ambulance/model_treatment.go
@@ -1,0 +1,30 @@
+/*
+ * Patient Treatment Management API
+ *
+ * Patient Treatment Management API
+ *
+ * API version: 1.0.0
+ * Contact: support@example.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance
+
+// Treatment represents a treatment for a patient
+type Treatment struct {
+
+	// Unique identifier for the treatment
+	Id string `json:"id"`
+
+	// Name of the treatment
+	Name string `json:"name"`
+
+	// Description of the treatment
+	Description string `json:"description"`
+
+	// StartDate of the treatment
+	StartDate string `json:"start"`
+
+	// EndDate of the treatment
+	EndDate string `json:"end"`
+}
